[package]
edition = "2024"
name = "rp2040-badger-w"
version = "0.1.0"
authors = ["Erik Bånvik <erik.public@gmail.com>"]
resolver = "2"

[[bin]]
name = "rp2040-badger-w"
path = "src/bin/badger.rs"
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.3"
cyw43 = { version = "0.6.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.9.0", features = ["defmt"] }

defmt = "1.0"
defmt-rtt = "1.1"

efmt = { git = "https://github.com/dragonnn/efmt.git", branch = "main" , features = ["heapless09"] }

embedded-graphics = "0.8.2"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-alloc = "0.5"
embedded-storage = "0.3.1"

embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-futures = "0.1"
embassy-net = { version = "0.8", features = ["defmt", "dhcpv4", "medium-ethernet", "proto-ipv4", "dns", "udp", "tcp"] }
embassy-rp = { version = "0.9", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }

heapless = "0.9"

panic-probe = { version = "1.0", features = ["print-defmt"] }
pcf85063a = { version = "0.1.1", features = ["defmt"] }
portable-atomic = { version = "1", features = ["critical-section"] }

rust-mqtt = { version = "0.4.1", default-features = false, features = ["v5", "alloc", "defmt"] }

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"

sntpc = { version = "0.8", default-features = false, features = ["defmt"] }
sntpc-net-embassy = { version = "0.8", features = ["defmt"] }

static_cell = "2.1"

jiff = { version = "0.2", default-features = false, features = ["static"] }
# Kept as a bridge for pcf85063a::PCF85063::set_datetime, which requires time::PrimitiveDateTime.
time = { version = "0.3", default-features = false }

u8g2-fonts = "0.7.2"
uc8151 = { git = "https://github.com/9names/uc8151-rs", branch = "main" }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
